bugfix: Update to test for account for rgb and rbga colors

--- a/tests/scss.scss
+++ b/tests/scss.scss
@@ -7,7 +7,11 @@
 
   .hover {
     border: 1px solid #707020;
+    background-color: rgba(0, 0, 0, 0.4);
   }
+}
+.this-stinks-too {
+  color: rgb(255, 255, 255, 0.5);
 }
 
 /* should pass */
